# PhotoProcessorV2

./: .gitignore  .prettierrc  LOGGING_IMPROVEMENTS.md  PhotoGoGoV2.bat  README.md  TRANSFER_REWORK_SUMMARY.md  eslint.config.js  index.html  package-lock.json  package.json  run.ps1  tailwind.config.js  vite.config.ts
scripts/: build-release.ps1  ensure-face-bundle.ps1  start-dev.mjs  undo-test1-naming.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/face-scan/: README.txt
src-tauri/scripts/: face_scan.py  prepare_face_scan_bundle.ps1
src-tauri/src/: lib.rs  main.rs  utils.rs
src-tauri/src/commands/: faces.rs  files.rs  import.rs  logs.rs  mod.rs  naming.rs  process.rs  settings.rs  staging_tags.rs  tidy.rs  transfer.rs
src/components/: FileTree.tsx  ImagePanel.tsx  JobConsole.tsx  JobTile.tsx  JobsPanel.tsx  ProgressBar.tsx  StarRating.tsx  index.ts
src/hooks/: index.ts  useJobsMonitor.ts  useProgressListener.ts  useReview.ts  useSettings.ts
src/pages/: Cleanup.tsx  FaceIdentify.tsx  Import.tsx  Jobs.tsx  Logs.tsx  NameEvents.tsx  PostProcess.tsx  Review.tsx  Settings.tsx  StagingExplorer.tsx  TidyUp.tsx  Transfer.tsx
src/types/: api.ts  index.ts  ui.ts
src/utils/: fileNaming.ts  index.ts  processJobs.ts
